BUG: GovStat leafchart date labels could sometimes wrap.

--- a/app/styles/screen-govstat-goal-page.sass
+++ b/app/styles/screen-govstat-goal-page.sass
@@ -330,18 +330,18 @@ $chartHeight: 210px
         background-color: #ababab
         bottom: 0
         margin-bottom: -2.3em
-        margin-left: -2.2em
+        margin-left: -2.5em
         @include opacity(1)
         position: absolute
         text-align: center
         @include transition(2s, opacity)
-        width: 4em
+        width: 4.6em
 
         .tip
           @include triangle(3px, #ababab, bottom)
           margin-top: -6px
           position: absolute
-          left: 1.9em
+          left: 2.2em
           top: 0
 
         &:hover
